--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,17 @@
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 #       .---..-.-.-..-..-..-..-.
 #       `| |'| | | || || | >  <
 #        `-' `-'-'-'`----''-''-'
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 # file: $HOME/.tmux.conf
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 
 
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 # STATUS & MESSAGE
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 
-# No status bar
+## No status bar
 setw -g status off
 
 #set -g status-justify right
@@ -23,63 +23,63 @@ setw -g status off
 #set -g message-fg black
 #set -g message-bg yellow
 
-# Window list
+## Window list
 #setw -g window-status-current-fg blue
 #setw -g window-status-current-attr none
 #setw -g window-status-alert-attr bright
 #setw -g window-status-format '#[fg=black]#W#F'
 #setw -g window-status-current-format '#[fg=red] #W#F'
 
-# Left
+## Left
 #set -g status-left ''
 #set -g status-left-length 40
 #set -g status-left-fg black
 
-# Right
+## Right
 #set -g status-right ''
 
 
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 # WINDOWS & PANES
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 
 set -g mouse-select-pane on
 setw -g automatic-rename on
 #set -g display-panes-time 1000
 
 
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 # MISC SETTINGS
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 
-# Start index at 1
+## Start index at 1
 set -g base-index 1
 
-# Automatically set window title
+## Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-# Repeat time
+## Repeat time
 #set -g repeat-time 100
 
-# 256 Colors
+## 256 Colors
 #set -g default-terminal "rxvt-256color"
 set -g default-terminal "screen-256color"
 #if [[ $TERM = "rxvt-256color" ]]; then export TERM="rxvt-unicode-256color"; fi
 
-# UTF8
+## UTF8
 setw -g utf8 on
 set -g status-utf8 on
 
-# Border Colors
+## Border Colors
 set -g pane-border-fg black
 set -g pane-active-border-fg green
 set -g display-panes-colour blue
 set -g display-panes-active-colour red
 
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 # CUSTOM KEY BINDINGS
-#-------~---~----------~----------~----
+##------~---~----------~----------~----
 
 bind h select-pane -L
 bind j select-pane -D
