--- a/.irssi/config
+++ b/.irssi/config
@@ -5,7 +5,7 @@ servers = (
     port = "6667";
     use_ssl = "no";
     ssl_verify = "no";
-    autoconnect = "no";
+    autoconnect = "yes";
   }
 );
 
@@ -185,12 +185,12 @@ statusbar = {
 settings = {
   core = {
     real_name = "tbuck153";
-    user_name = "tbuck153";
+    user_name = "tbck";
     nick = "tbuck";
     timestamp_Format = "";
     use_proxy = "yes";
     proxy_string = "CONNECT %s:%d HTTP/1.0\012\012";
-    proxy_address = "177.42.61.218";
+    proxy_address = "62.201.254.162";
     proxy_port = "8080";
     proxy_string_after = "conn %s %d";
     proxy_password = "";
@@ -200,3 +200,4 @@ settings = {
   "perl/core/scripts" = { splitlong_max_length = "60"; };
   "irc/core" = { alternate_nick = "tbuck153"; };
 };
+keyboard = ( { key = "^L"; id = "command"; data = "clear"; } );
