irssi config update

--- a/.irssi/config
+++ b/.irssi/config
@@ -188,9 +188,9 @@ settings = {
     user_name = "tbck";
     nick = "tbuck";
     timestamp_Format = "";
-    use_proxy = "yes";
+    use_proxy = "no";
     proxy_string = "CONNECT %s:%d HTTP/1.0\012\012";
-    proxy_address = "62.201.254.162";
+    proxy_address = "119.252.160.34";
     proxy_port = "8080";
     proxy_string_after = "conn %s %d";
     proxy_password = "";
