--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,56 +1,8 @@
-##------~---~----------~----------~----
-#       .---..-.-.-..-..-..-..-.
-#       `| |'| | | || || | >  <
-#        `-' `-'-'-'`----''-''-'
-##------~---~----------~----------~----
-# file: $HOME/.tmux.conf
-##------~---~----------~----------~----
-
-
-##------~---~----------~----------~----
-# STATUS & MESSAGE
-##------~---~----------~----------~----
-
-## No status bar
+# No status bar
 setw -g status off
-
-#set -g status-justify right
-#set -g status-bg default
-#set -g status-fg default
-#set -g status-interval 5
-
-#set -g message-attr bold
-#set -g message-fg black
-#set -g message-bg yellow
-
-## Window list
-#setw -g window-status-current-fg blue
-#setw -g window-status-current-attr none
-#setw -g window-status-alert-attr bright
-#setw -g window-status-format '#[fg=black]#W#F'
-#setw -g window-status-current-format '#[fg=red] #W#F'
-
-## Left
-#set -g status-left ''
-#set -g status-left-length 40
-#set -g status-left-fg black
-
-## Right
-#set -g status-right ''
-
-
-##------~---~----------~----------~----
-# WINDOWS & PANES
-##------~---~----------~----------~----
 
 set -g mouse-select-pane on
 setw -g automatic-rename on
-#set -g display-panes-time 1000
-
-
-##------~---~----------~----------~----
-# MISC SETTINGS
-##------~---~----------~----------~----
 
 ## Start index at 1
 set -g base-index 1
@@ -59,13 +11,8 @@ set -g base-index 1
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-## Repeat time
-#set -g repeat-time 100
-
 ## 256 Colors
-#set -g default-terminal "rxvt-256color"
 set -g default-terminal "screen-256color"
-#if [[ $TERM = "rxvt-256color" ]]; then export TERM="rxvt-unicode-256color"; fi
 
 ## UTF8
 setw -g utf8 on
@@ -76,10 +23,6 @@ set -g pane-border-fg black
 set -g pane-active-border-fg green
 set -g display-panes-colour blue
 set -g display-panes-active-colour red
-
-##------~---~----------~----------~----
-# CUSTOM KEY BINDINGS
-##------~---~----------~----------~----
 
 bind h select-pane -L
 bind j select-pane -D
@@ -93,3 +36,4 @@ bind M-h resize-pane -L 5
 bind M-j resize-pane -D 5
 bind M-k resize-pane -U 5
 bind M-l resize-pane -R 5
+
